syntax = "proto3";

option go_package = "github.com/Speakerkfm/test_svc/service_c/api/service_c";

service PhoneService {
  rpc CheckPhone(CheckPhoneRequest) returns (CheckPhoneResponse);
}

message CheckPhoneRequest {
  string phone = 1;
}

message CheckPhoneResponse {
  bool exists = 1;
}